# librpc

./: CMakeLists.txt  CPackOptions.cmake.in  README.md
include/: rpc.h
src/: rpc-private.h  rpc.c
